bin_PROGRAMS = node_updater way_updater relation_updater complete_updater
node_updater_SOURCES = node_updater.test.cc ../core/settings.cc
way_updater_SOURCES = way_updater.test.cc ../core/settings.cc
relation_updater_SOURCES = relation_updater.test.cc ../core/settings.cc
complete_updater_SOURCES = complete_updater.test.cc ../core/settings.cc
