bin_PROGRAMS = test_id_query test_print test_recurse
test_id_query_SOURCES = statement.c id_query.test.c id_query.c ../core/settings.cc
test_print_SOURCES = statement.c print.test.c print.c id_query.c ../core/settings.cc
test_recurse_SOURCES = statement.c recurse.test.c recurse.c print.c id_query.c ../core/settings.cc
