bin_PROGRAMS = test_id_query test_print test_recurse test_query test_bbox_query
test_id_query_SOURCES = statement.cc id_query.test.cc id_query.cc ../core/settings.cc
test_print_SOURCES = statement.cc print.test.cc print.cc id_query.cc ../core/settings.cc
test_recurse_SOURCES = statement.cc recurse.test.cc recurse.cc print.cc id_query.cc ../core/settings.cc
test_query_SOURCES = statement.cc query.test.cc print.cc query.cc ../core/settings.cc
test_bbox_query_SOURCES = statement.cc bbox_query.test.cc print.cc bbox_query.cc ../core/settings.cc
